<resources>
    <string name="app_name">Do It!</string>
    <string name="action_settings">Settings</string>
    <string name="no_cat">No category</string>
    <string name="cat_work">Work</string>
    <string name="cat_birthday">Birthday</string>
    <string name="cat_wish_list">Wishlist</string>
    <string name="cat_personal">Personal</string>
    <string name="cat_other">Others</string>
    <string name="tasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="mine">Mine</string>
    <string name="task_detail">Task detail</string>
    <string name="create_new_task">Create New Task</string>
    <string name="task_name">Task name</string>
    <string name="plus_add">+ Add</string>
    <string name="subcate_task">Subcate Task</string>
    <string name="note">Note</string>
    <string name="category">Category</string>
    <string name="no_category">No category</string>
    <string name="add_calendar">Add calendar</string>
    <string name="attachment">Attachment</string>
    <string name="select_attachment">Select attachment</string>
    <string name="create_new_category">Create new</string>
    <string name="create_new_category_title">Create new category</string>
    <string name="add_time">Add time</string>
    <string name="reminder">Reminder</string>
    <string name="repeat">Repeat</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <string name="category_names">Category names</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="cat_name_empty_error">Category name can not be empty</string>
    <string name="cat_name_existed_error">Category name existed</string>
    <string name="search_task">Search task</string>
    <string name="recent_search">Recent searches</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_undone">Mark as undone</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="duplicate_task">Duplicate task</string>
    <string name="bookmark">Bookmark</string>
    <string name="delete_repeat_task_reminder">Delete repeat task reminder</string>
    <string name="all_future_occurrences_will_be_deleted">All future occurrences will be deleted.</string>
    <string name="duplicated">Duplicated.</string>
    <string name="flag">Flag</string>
    <string name="number">Number</string>
    <string name="marked">Marked.</string>
    <string name="hour">Hour</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="same_with_due_date">Same with due date</string>
    <string name="five_minutes_before">5 minutes before</string>
    <string name="ten_minutes_before">10 minutes before</string>
    <string name="fifteen_minutes_before">15 minutes before</string>
    <string name="thirty_minutes_before">30 minutes before</string>
    <string name="one_day_before">1 day before</string>
    <string name="set_reminder_time">Set Reminder Time</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="two_days_before">2 days before</string>
    <string name="tasks_overview">Tasks Overview</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="pending_tasks">Pending Tasks</string>
    <string name="tasks_in_next_7_days">Tasks in next 7 days</string>
    <string name="create_task">Create task</string>
    <string name="added_task">Added task.</string>
    <string name="screenlock_reminder">Screenlock Reminder</string>
    <string name="reminder_type">Reminder type</string>
    <string name="reminder_at">Reminder at</string>
    <string name="set_reminder">Set reminder</string>
    <string name="set_as_repeat">Set as repeat</string>
    <string name="repeat_at">Repeat at</string>
    <string name="_5_minute_before">5 minute before</string>
    <string name="saved">Saved.</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="done">Done</string>
    <string name="select_picture">Select Picture</string>
    <string name="select_video">Select Video</string>
    <string name="select_audio">Select Audio</string>
    <string name="audio">Audio</string>
    <string name="camera">Camera</string>
    <string name="select_album">Select Album</string>
    <string name="no_data">No data</string>
    <string name="organize_tasks_easier_with_to_do_list">Organize tasks easier with To-Do List</string>
    <string name="incoming_task">Incoming task</string>
    <string name="could_not_open_this_attachment">Could not open this attachment.</string>
    <string name="could_not_find_app_handle_attachment">Could not find any app that can open this attachment.</string>
    <string name="dismiss">Dismiss</string>
    <string name="install">INSTALL</string>
    <string name="colors">Colors</string>
    <string name="textures">Textures</string>
    <string name="sceneries">Sceneries</string>
    <string name="reminder_time_custom">Reminder Time Custom</string>
    <string name="before">Before</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="widget">Widget</string>
    <string name="noti_and_reminder"><![CDATA[Noti & reminder]]></string>
    <string name="first_day_of_week">First day of week</string>
    <string name="time_format">Time format</string>
    <string name="date_format">Date format</string>
    <string name="language">Language</string>
    <string name="rate_app">Rate app</string>
    <string name="share_app">Share app</string>
    <string name="feedback">Feedback</string>
    <string name="policy">Policy</string>
    <string name="version_settings">Version <b>&versionName;</b></string>
    <string name="version_info">Version &lt;b>%1$s&lt;/b></string>
    <string-array name="repeat_time_unit">
        <item>@string/minutes</item>
        <item>@string/hours</item>
        <item>@string/days</item>
        <item>@string/weeks</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_help">Notification Help</string>
    <string name="task_reminder">TASK REMINDER</string>
    <string name="default_task_reminder_type">Default task reminder type</string>
    <string name="default_notification_rington">Default notification ringtone</string>
    <string name="to_do_default">To-do default</string>
    <string name="default_alarm_rington">Default alarm ringtone</string>
    <string name="screenlock_task_reminder">Screenlock task reminder</string>
    <string name="add_tasks_from_notification_bar">Add tasks from notification bar</string>
    <string name="snooze_the_task_reminder">Snooze the task reminder</string>
    <string name="daily_reminder">DAILY REMINDER</string>
    <string name="daily_reminder_ringtone">Daily reminder ringtone</string>
    <string name="notification_cannot_pop_up">Notification cannot pop-up</string>
    <string name="notification_guild">To Do may be cleared from the background by the systerm. In order to notify you on time, please enable the Ignore battery saving mode.</string>
    <string name="allow_notification">Allow Notification</string>
    <string name="ignore_battery_saving_mode">Ignore battery saving mode</string>
    <string name="floating_window">Floating window</string>
    <string name="noti_and_reminder_title"><![CDATA[Noti & reminder]]></string>
    <string name="permis">Permis</string>
    <string name="permit_drawing_over_other_apps">Permit drawing over other apps</string>
    <string name="permis_guild">This permission allows an to display on top of others apps you are us-ing and interfere with your use of the interface in other applications, or change what you think you are seeing in other applications.</string>
    <string name="notification_des">With 1-3s short ringtone</string>
    <string name="with_repeat_long_ringtone">With repeat long ringtone</string>
    <string name="ringtone_customization">RINGTONE CUSTOMIZATION</string>
    <string name="record_ringtone">Record ringtone</string>
    <string name="music_on_device">Music on device</string>
    <string name="system_ringtone">SYSTEM RINGTONE</string>
    <string name="add">Add</string>
    <string name="today">Today</string>
    <string name="no_task">No task</string>
    <string name="standard">Standard</string>
    <string name="size44">Size:4*4</string>
    <string name="lite">Lite</string>
    <string name="size32">Size:3*2</string>
    <string name="month">Month</string>
    <string name="size43">Size:4*3</string>
    <string name="count_down">Count down</string>
    <string name="size41">Size:4*1</string>
    <string name="system_default">System default</string>
    <string name="todo_default">To-do default</string>
    <string name="recording">Recording</string>
    <string name="start_record">Start record</string>
    <string name="ad" translatable="false">AD</string>
    <string name="_24_hour">24 Hour</string>
    <string name="_12_hour">12 Hour</string>
    <string name="auto">Auto</string>
    <string name="monday">Monday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="we_are_working_hard_to_provide_a_better_user_experience">We are working hard to provide a better user experience.</string>
    <string name="rate">Rate</string>
    <string name="please_rate_us_5_stars_if_you_enjoy_our_app">Please rate us 5 stars if you enjoy our app</string>
    <string name="feedback_subject">To-do List feedback from user</string>
    <string name="snooze_after">Snooze after</string>
    <string name="five_minutes">5 minutes</string>
    <string name="fifteen_minutes">15 minutes</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="one_hour">1 hour</string>
    <string name="default_todo_ringtone_path">file:///android_asset/raw/to_do_default.mp3</string>
    <string name="setup_themes">Setup themes</string>
    <string name="skip">Skip</string>
    <string name="apply">Apply</string>
    <string name="color">Color</string>
    <string name="event_icon">Event icon</string>
    <string name="event_name">Event name</string>
    <string name="count_type">Count type</string>
    <string name="day">Day</string>
    <string name="remaining_days">Remaining days</string>
    <string name="please_set_event_name">Please set the event name</string>
    <string name="tap_to_set_event">Tap to set event</string>
    <string name="alpha">Opacity</string>
    <string name="my_tasks">My Tasks</string>
    <string name="future">Future</string>
    <string name="completed">Completed</string>
    <string name="today_task">Today tasks</string>
    <string name="future_task">Future tasks</string>
    <string name="done_task">Completed tasks</string>
    <string name="time_range">Time range</string>
    <string name="all_categories">All categories</string>
    <string name="all_time">All time</string>
    <string name="display_completed_tasks">Display completed tasks</string>
    <string name="no_task_tap_button_to_add_new_task">No task, tap + button to add new task</string>
    <string name="custom">Custom</string>
    <string name="enable">Enable</string>
</resources>