<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_nav_graph"
    app:startDestination="@id/NewTaskFragment">

    <fragment
        android:id="@+id/NewTaskFragment"
        android:name="com.trustedapp.todolist.planner.reminders.screens.newtask.NewTaskFragment"
        android:label="@string/task_detail"
        tools:layout="@layout/fragment_new_task">

        <action
            android:id="@+id/toSelectAttachment"
            app:destination="@id/SelectAttachmentFragment" />

        <action
            android:id="@+id/toAddCalendar"
            app:destination="@id/AddCalendarBottomSheet" />

        <action
            android:id="@+id/toCreateCat"
            app:destination="@id/AddCategoryFragment" />

        <action android:id="@+id/toAddReminderOut"
            app:destination="@id/AddReminderFragment"/>

        <action android:id="@+id/toAddRepeatOut"
            app:destination="@id/AddRepeatFragment"/>
        <action
            android:id="@+id/toRatingDialog"
            app:destination="@id/ratingDialogFragment" />
    </fragment>

    <dialog
        android:id="@+id/SelectAttachmentFragment"
        android:name="com.trustedapp.todolist.planner.reminders.screens.newtask.attachment.SelectAttachmentDialogFragment"
        android:label="@string/select_attachment"
        tools:layout="@layout/layout_select_attachment" >
        <action
            android:id="@+id/openAttachmentBottomDialog"
            app:destination="@id/selectAttachmentBottomDialog" />
    </dialog>

    <dialog
        android:id="@+id/AddCalendarBottomSheet"
        android:name="com.trustedapp.todolist.planner.reminders.screens.newtask.calendar.AddCalendarBottomSheetDialogFragment"
        android:label="@string/add_calendar"
        tools:layout="@layout/layout_add_calendar">

        <action android:id="@+id/toAddReminder"
            app:destination="@id/AddReminderFragment"/>

        <action android:id="@+id/toAddRepeat"
            app:destination="@id/AddRepeatFragment"/>
    </dialog>

    <dialog
        android:id="@+id/AddCategoryFragment"
        android:name="com.trustedapp.todolist.planner.reminders.screens.newtask.category.CreateCategoryDialogFragment"
        android:label="@string/create_new_category_title"
        tools:layout="@layout/layout_create_category" />

    <dialog
        android:id="@+id/AddReminderFragment"
        android:name="com.trustedapp.todolist.planner.reminders.screens.newtask.calendar.SetReminderDialog"
        android:label="@string/reminder"
        tools:layout="@layout/fragment_set_reminder">
        <action
            android:id="@+id/toCustomReminderTimeDialog"
            app:destination="@id/CustomReminderTime" />
    </dialog>

    <dialog
        android:id="@+id/AddRepeatFragment"
        android:name="com.trustedapp.todolist.planner.reminders.screens.newtask.calendar.SetRepeatAtDialog"
        android:label="@string/repeat"
        tools:layout="@layout/fragment_set_repeat"/>
    <dialog
        android:id="@+id/selectAttachmentBottomDialog"
        android:name="com.trustedapp.todolist.planner.reminders.screens.newtask.attachment.SelectAttachmentBottomDialog"
        android:label="SelectAttachmentBottomDialog"
        tools:layout="@layout/layout_select_attachment_list"/>
    <dialog
        android:id="@+id/CustomReminderTime"
        android:name="com.trustedapp.todolist.planner.reminders.screens.newtask.calendar.SetCustomReminderTime"
        android:label="SetCustomReminderTime"
        tools:layout="@layout/fragment_set_custom_reminder_time"/>
    <dialog
        android:id="@+id/ratingDialogFragment"
        android:name="com.trustedapp.todolist.planner.reminders.screens.settings.rating.RatingDialogFragment"
        android:label="RatingDialogFragment"
        tools:layout="@layout/fragment_rating"/>
</navigation>
