<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="48dp"
    android:background="@drawable/bg_white_rounded"
    android:padding="24dp">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_category_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editCatName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@null"
        android:backgroundTint="@color/color_border_grey"
        android:hint="@string/category_names"
        android:inputType="textMultiLine"
        android:textColor="@android:color/black"
        android:textColorHint="@color/color_text_secondary_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />

    <TextView
        android:id="@+id/textInvalidate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editCatName"
        tools:text="@string/cat_name_empty_error" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttonGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCancel"
        style="@style/ButtonSecondaryWhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInvalidate" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSave"
        style="@style/ButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textInvalidate" />
</androidx.constraintlayout.widget.ConstraintLayout>
